# FintechBackend

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  future_implementations.md  pyproject.toml
.github/actions/build-push-ecr/: action.yml
.github/actions/deploy-docker-ec2/: action.yml
.github/actions/deploy-ec2/: action.yml
.github/actions/prepare-docker-host/: action.yml
.github/actions/prepare-fastapi-runtime/: action.yml
.github/workflows/: cd.yaml  ci.yaml
app/: auth.py  config.py  database.py  db.py  deps.py  logging_config.py  main.py  models.py  schemas.py  security.py
app/core/: __init__.py  config.py  exceptions.py  logging_config.py  middleware.py  security.py
app/db/: __init__.py  session.py
app/dependencies/: __init__.py  auth.py
app/models/: __init__.py  transaction.py  user.py
app/routers/: auth.py  dashboard.py  health.py  transactions.py  users.py  utils.py
app/schemas/: __init__.py  dashboard.py  transaction.py  user.py
app/services/: auth_service.py  dashboard_service.py  transaction_service.py
docs/: api.md  database.md  models.md  project-info.md  setup.md
tests/: __init__.py  test_app.py  test_http.py  test_routes.py  test_support.py
