[project]
name = "fintechbackend"
version = "0.1.0"
description = "Finance data processing and access control backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pylint>=3.0.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "python-jose>=3.3,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]
